use native codepipeline exports
and thus get rid of static global cfn exports

--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -43,3 +43,9 @@ Resources:
     DependsOn: ControlTower
     Properties:
       TemplateURL: !Sub ${TemplateUrlPrefix}/components/service-control-policies.yaml
+
+Outputs:
+
+  RootMailDelegationTarget:
+    Description: Nameservers for the hosted zone delegation
+    Value: !GetAtt RootMail.Outputs.NameServers
