output account id so it can be used by tests

--- a/tests/account-factory.yaml
+++ b/tests/account-factory.yaml
@@ -117,8 +117,8 @@ Resources:
         - Key: AccountName
           Value: !Ref AccountName
 
-#Outputs:
-#
-#  AccountId:
-#    Description: Nameservers for the hosted zone delegation
-#    Value: !GetAtt Account.Outputs.AccountId
+Outputs:
+
+  AccountId:
+    Description: Nameservers for the hosted zone delegation
+    Value: !GetAtt Account.Outputs.AccountId
