--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -174,6 +174,7 @@ Resources:
 
             - Name: AccountFactoryFixture
               RunOrder: 9
+              Namespace: accountfactoryfixture
               ActionTypeId:
                 Category: Deploy
                 Owner: AWS
@@ -203,6 +204,13 @@ Resources:
                 Version: "1"
               Configuration:
                 ProjectName: !Ref Test
+                EnvironmentVariables: |
+                  [
+                    {
+                      "name": "ACCOUNT_FACTORY_ACCOUNT_ID",
+                      "value": "#{accountfactoryfixture.AccountId}"
+                    }
+                  ]
               InputArtifacts:
                 - Name: SourceOutput
               Name: Test
