adapt test fixture root email to naming convention

--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -191,10 +191,10 @@ Resources:
                 ParameterOverrides: !Sub |
                   {
                     "AccountName": "sw-#{randomizer.account_factory_email_prefix}",
-                    "AccountEmail": "#{randomizer.account_factory_email_prefix}@aws.${RootMailDomain}",
+                    "AccountEmail": "#root+{randomizer.account_factory_email_prefix}@aws.${RootMailDomain}",
                     "SSOUserFirstName": "Arno",
                     "SSOUserLastName": "Nym",
-                    "SSOUserEmail": "#{randomizer.account_factory_email_prefix}@aws.${RootMailDomain}",
+                    "SSOUserEmail": "root+#{randomizer.account_factory_email_prefix}@aws.${RootMailDomain}",
                     "ManagedOrganizationalUnit": "Custom"
                   }
                 Capabilities: CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND
