--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -60,7 +60,7 @@ Resources:
     Condition: IncludeControlTower
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub ${TemplateUrlPrefix}/components/00-control-tower.yaml
+      TemplateURL: !Sub ${TemplateUrlPrefix}/components/control-tower.yaml
       Parameters:
         AuditAWSAccountEmail: !Ref AuditAWSAccountEmail
         LogArchiveAWSAccountEmail: !Ref LogArchiveAWSAccountEmail
@@ -69,13 +69,13 @@ Resources:
     Condition: IncludeGuardDuty
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub ${TemplateUrlPrefix}/components/01-guardduty.yaml
+      TemplateURL: !Sub ${TemplateUrlPrefix}/components/guardduty.yaml
 
   RootMail:
     Condition: IncludeRootMail
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub ${TemplateUrlPrefix}/components/06-rootmail.yaml
+      TemplateURL: !Sub ${TemplateUrlPrefix}/components/rootmail.yaml
       Parameters:
         Domain: !Ref Domain
 
@@ -83,7 +83,7 @@ Resources:
     Condition: IncludeSecurityHub
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub ${TemplateUrlPrefix}/components/04-security-hub.yaml
+      TemplateURL: !Sub ${TemplateUrlPrefix}/components/security-hub.yaml
 
   ServiceControlPolicies:
     Condition: IncludeServiceControlPolicies
