--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -25,6 +25,9 @@ Outputs:
   DelegationTarget:
     Description: Nameservers for the hosted zone delegation
     Value: !Join [ ',', !GetAtt HostedZone.NameServers ]
+  EmailGeneratorFunction:
+    Description: Lambda function to verify email delegation and generate new email aliases
+    Value: !Ref EmailGeneratorFunction
 
 Resources:
 
@@ -68,6 +71,130 @@ Resources:
             }
           ]
         }
+
+  EmailGeneratorFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      InlineCode: !Sub |
+        import boto3
+        import itertools
+        import json
+        import time
+        import uuid
+
+        domain = "${Subdomain}.${Domain}"
+        ses = boto3.client("ses")
+
+        def backoff(msg, res, n):
+
+          wait = pow(2, n)
+
+          log({
+            'level': 'info',
+            'msg': msg,
+            'res': res,
+            'round': n,
+            'waiting_in_seconds': wait,
+          })
+
+          time.sleep(n)
+
+        def handler(event, context):
+
+          log({
+            'event': event,
+          })
+
+          verify = event.get('verify', 'true')
+
+          if verify == 'true':
+
+            for n in itertools.count(start=1):
+
+              res = ses.get_account_sending_enabled()
+
+              if res.get('Enabled'):
+                break
+              else:
+                backoff('sending not yet enabled', res, n)
+
+            for n in itertools.count(start=1):
+
+              res = ses.get_identity_verification_attributes(
+                Identities=[
+                  domain,
+                ],
+              )
+
+              if res.get('VerificationAttributes', {}).get(domain, {}).get('VerificationStatus') == 'Success':
+                break
+              else:
+                backoff('verification not yet successful', res, n)
+
+            for n in itertools.count(start=1):
+
+              res = ses.get_identity_dkim_attributes(
+                Identities=[
+                  domain,
+                ],
+              )
+
+              if res.get('DkimAttributes', {}).get(domain, {}).get('DkimVerificationStatus') == 'Success':
+                break
+              else:
+                backoff('DKIM verification not yet successful', res, n)
+
+            for n in itertools.count(start=1):
+
+              res = ses.get_identity_notification_attributes(
+                Identities=[
+                  domain,
+                ],
+              )
+
+              if res.get('NotificationAttributes', {}).get(domain, {}).get('ForwardingEnabled') == True:
+                break
+              else:
+                backoff('forwarding not yet enabled', res, n)
+
+          email = event.get('default')
+
+          if not email:
+
+            max = 64 - len(domain) - 1 - 5
+
+            alias = str(uuid.uuid4())
+            alias = alias[:max] * (len(alias) > max)
+
+            if len(alias) < 36:
+
+              log({
+                'domain': domain,
+                'msg': 'UUID local part was reduced in length because your domain is too long for Control Tower (64 characters in total) - this increases the chance of collisions',
+                'level': 'warn',
+                'length': len(alias),
+                'max': 36,
+              })
+
+            email = 'root+{alias}@{domain}'.format(alias = alias, domain = domain)
+
+          return {
+            'email': email,
+          }
+
+        def log(msg):
+          print(json.dumps(msg), flush=True)
+
+      Runtime: python3.7
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action: # TODO: least privilege
+                - ses:*
+              Resource: "*"
+      Timeout: 260 # the timeout effectivly limits retries to 2^(n+1) - 1 = 9 attempts with backup
 
   HostedZone:
     Type: AWS::Route53::HostedZone
