--- a/tests/pipeline.yaml
+++ b/tests/pipeline.yaml
@@ -205,6 +205,7 @@ Resources:
                   {
                     "PipelineCloudformationRoleArn": "${CloudFormationRole.Arn}"
                   }
+                Capabilities: CAPABILITY_AUTO_EXPAND,CAPABILITY_IAM
 
             - Name: AccountFactoryFixture
               RunOrder: 90
