--- a/components/superwerker.yaml
+++ b/components/superwerker.yaml
@@ -95,5 +95,6 @@ Resources:
 Outputs:
 
   RootMailDelegationTarget:
+    Condition: IncludeRootMail
     Description: Nameservers for the hosted zone delegation
     Value: !GetAtt RootMail.Outputs.DelegationTarget
