--- a/components/rootmail.yaml
+++ b/components/rootmail.yaml
@@ -74,86 +74,15 @@ Resources:
 
   EmailGeneratorFunction:
     Type: AWS::Serverless::Function
-    Properties:
+    Properties: # TODO: use environment variables instead of variables in !Sub
       Handler: index.handler
       InlineCode: !Sub |
-        import boto3
-        import itertools
         import json
-        import time
         import uuid
 
         domain = "${Subdomain}.${Domain}"
-        ses = boto3.client("ses")
-
-        def backoff(msg, res, n):
-
-          wait = pow(2, n)
-
-          log({
-            'level': 'info',
-            'msg': msg,
-            'res': res,
-            'round': n,
-            'waiting_in_seconds': wait,
-          })
-
-          time.sleep(n)
 
         def handler(event, context):
-
-          log({
-            'event': event,
-            'level': 'debug',
-          })
-
-          for n in itertools.count(start=1):
-
-            res = ses.get_account_sending_enabled()
-
-            if res.get('Enabled'):
-              break
-            else:
-              backoff('sending not yet enabled', res, n)
-
-          for n in itertools.count(start=1):
-
-            res = ses.get_identity_verification_attributes(
-              Identities=[
-                domain,
-              ],
-            )
-
-            if res.get('VerificationAttributes', {}).get(domain, {}).get('VerificationStatus') == 'Success':
-              break
-            else:
-              backoff('verification not yet successful', res, n)
-
-          for n in itertools.count(start=1):
-
-            res = ses.get_identity_dkim_attributes(
-              Identities=[
-                domain,
-              ],
-            )
-
-            if res.get('DkimAttributes', {}).get(domain, {}).get('DkimVerificationStatus') == 'Success':
-              break
-            else:
-              backoff('DKIM verification not yet successful', res, n)
-
-          for n in itertools.count(start=1):
-
-            res = ses.get_identity_notification_attributes(
-              Identities=[
-                domain,
-              ],
-            )
-
-            if res.get('NotificationAttributes', {}).get(domain, {}).get('ForwardingEnabled') == True:
-              break
-            else:
-              backoff('forwarding not yet enabled', res, n)
 
           max = 64 - len(domain) - 1 - 5
 
@@ -180,13 +109,6 @@ Resources:
           print(json.dumps(msg), flush=True)
 
       Runtime: python3.7
-      Policies:
-        - Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Action: # TODO: least privilege
-                - ses:*
-              Resource: "*"
       Timeout: 260 # the timeout effectivly limits retries to 2^(n+1) - 1 = 9 attempts with backup
 
   HostedZone:
@@ -349,6 +271,171 @@ Resources:
         - !Sub "\"${HostedZoneDKIMAndVerificationRecords.VerificationToken}\""
       TTL: 60
       Type: TXT
+
+  RootmailReady:
+    Type: AWS::Serverless::Function
+    Properties:
+      Events:
+        Schedule:
+          Type: Schedule
+          Properties:
+            Schedule: rate(5 minutes)
+      Handler: index.handler
+      InlineCode: !Sub |
+        import boto3
+        import itertools
+        import json
+        import time
+
+        domain = "${Subdomain}.${Domain}"
+        ses = boto3.client("ses")
+
+        def backoff(msg, res, n):
+
+          wait = pow(2, n)
+
+          log({
+            'level': 'info',
+            'msg': msg,
+            'res': res,
+            'round': n,
+            'waiting_in_seconds': wait,
+          })
+
+          time.sleep(n)
+
+        def handler(event, context):
+
+          log({
+            'event': event,
+            'level': 'debug',
+          })
+
+          for n in itertools.count(start=1):
+
+            res = ses.get_account_sending_enabled()
+
+            if res.get('Enabled'):
+              break
+            else:
+              backoff('sending not yet enabled', res, n)
+
+          for n in itertools.count(start=1):
+
+            res = ses.get_identity_verification_attributes(
+              Identities=[
+                domain,
+              ],
+            )
+
+            if res.get('VerificationAttributes', {}).get(domain, {}).get('VerificationStatus') == 'Success':
+              break
+            else:
+              backoff('verification not yet successful', res, n)
+
+          for n in itertools.count(start=1):
+
+            res = ses.get_identity_dkim_attributes(
+              Identities=[
+                domain,
+              ],
+            )
+
+            if res.get('DkimAttributes', {}).get(domain, {}).get('DkimVerificationStatus') == 'Success':
+              break
+            else:
+              backoff('DKIM verification not yet successful', res, n)
+
+          for n in itertools.count(start=1):
+
+            res = ses.get_identity_notification_attributes(
+              Identities=[
+                domain,
+              ],
+            )
+
+            if res.get('NotificationAttributes', {}).get(domain, {}).get('ForwardingEnabled') == True:
+              break
+            else:
+              backoff('forwarding not yet enabled', res, n)
+
+        def log(msg):
+          print(json.dumps(msg), flush=True)
+
+      Runtime: python3.7
+      Policies:
+        - Version: 2012-10-17
+          Statement:
+            - Effect: Allow
+              Action: # TODO: least privilege
+                - ses:*
+              Resource: '*'
+      Timeout: 260 # the timeout effectivly limits retries to 2^(n+1) - 1 = 9 attempts with backup
+
+  RootmailReadyAlert:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref RootmailReady
+      EvaluationPeriods: 1
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: 180
+      Statistic: Sum
+      Threshold: '1'
+
+  RootmailReadyHandle:
+    Type: AWS::CloudFormation::WaitConditionHandle
+
+  RootmailReadyHandleWaitCondition:
+    Type: AWS::CloudFormation::WaitCondition
+    Properties:
+      Handle: !Ref RootmailReadyHandle
+      Timeout: 28800 # 8 hours time to wire DNS
+
+  RootmailReadyTrigger:
+    Type: AWS::Serverless::Function
+    Properties:
+      Events:
+        EmailHealth:
+          Type: CloudWatchEvent
+          Properties:
+            Pattern:
+              detail-type:
+                - CloudWatch Alarm State Change
+              source:
+                - aws.cloudwatch
+              detail:
+                alarmName:
+                  - !Ref RootmailReadyAlert
+                state:
+                  value:
+                    - OK
+      Handler: index.handler
+      Environment:
+        Variables:
+          SIGNAL_URL: !Ref RootmailReadyHandle
+      InlineCode: |-
+        import json
+        import os
+        import urllib3
+        import uuid
+
+        def handler(event, context):
+
+          encoded_body = json.dumps({
+              "Status": "SUCCESS",
+              "Reason": "Rootmail Setup completed",
+              "UniqueId": str(uuid.uuid4()),
+              "Data": "Rootmail Setup completed"
+          })
+
+          http = urllib3.PoolManager()
+          http.request('PUT', os.environ['SIGNAL_URL'], body=encoded_body)
+      Runtime: python3.7
+      Timeout: 10
 
   SESReceiptRuleSet:
     Type: AWS::SES::ReceiptRuleSet
